# pga-com-backend

./: .env  .gitignore  Cargo.toml  README.md
docker/: Dockerfile  docker-compose.yml
migrations/: 0001_user_table.sql  0002_token_table.sql
src/: database.rs  error.rs  main.rs  model.rs  resources.rs
src/api/: mod.rs  user_rest.rs
src/database/: base.rs
src/model/: auth.rs  mod.rs  oauth2_provider.rs  user.rs
src/repositories/: token_repository.rs  user_repository.rs
src/util/: mod.rs  pass_hash.rs
src/utils/: jwt.rs
src/web/: auth_rest.rs  mod.rs  route_login.rs  route_user.rs  user_rest.rs
test/: rest_dev.rs
test/http/: user.http
