[package]
name = "pga-com-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web / UUID
uuid = {version = "1.8.0", features = ["v4"]}
tokio = {version = "^1", features = ["full"]}
axum = {version = "^0.7", features = ["macros"]}
tower-http = {version = "^0.5", features = ["fs"]}
tower-cookies = "^0"

# JSON / Serde
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"

[dev-dependencies]
anyhow = "^1"
httpc-test = "^0.1"
