[package]
name = "pga-com-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web / UUID
uuid = {version = "1.8.0", features = ["v4"]}
tokio = {version = "^1", features = ["full"]}
sqlx = {version = "^0", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
axum = {version = "^0.7", features = ["macros"]}
axum-extra = { version = "^0.9", features = ["typed-header"] }
tower-http = {version = "^0.5", features = ["fs"]}
tower-cookies = "^0"

lazy_static = "^1"
dotenv = "^0"
chrono = "^0"

# JSON / Serde
jsonwebtoken = "^9"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"

# Hashing
sha2 = "^0"
hex = "^0"

[dev-dependencies]
anyhow = "^1"
httpc-test = "^0.1"
